docs: fix toc covered by footer
close #23702

--- a/site/theme/static/footer.less
+++ b/site/theme/static/footer.less
@@ -2,7 +2,7 @@
 @import './colors';
 
 .rc-footer {
-  z-index: 9;
+  z-index: 8;
 
   &-container {
     max-width: unset;
